fixed invisible cursor problem

--- a/src/pages/Home/Cursor/Cursor.css
+++ b/src/pages/Home/Cursor/Cursor.css
@@ -1,7 +1,7 @@
 /* styles.css */
 html *,
 body * {
-  cursor: none;
+  /* cursor: none; */
 }
 .cursor,
 .cursor-outline {
